Fix displaying watermark on mobile (TODO: confirm on different devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,10 +40,10 @@ div#app-static-html {
   background-image: url('assets/img/watermark-20.png');
   background-repeat: no-repeat;
   // background-position: bottom;
-  background-position-x: 50%;
-  background-position-y: 60%;
+  background-size: 50vw;
+  background-position-x: 45vw;
+  background-position-y: 63vh;
   background-attachment: fixed;
-  background-size: 100%;
   // background-origin: content-box;
   margin: 2rem;
   ul {
